<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_tips"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e0e0e0"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/txt_tips" />
    <Button
        android:id="@+id/btn_small"
        android:text="@string/small"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_medium"
        app:icon="@drawable/glass"
        app:iconSize="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btn_medium"
        android:text="@string/medium"
        app:icon="@drawable/glass"
        app:layout_constraintStart_toEndOf="@id/btn_small"
        app:layout_constraintEnd_toStartOf="@id/btn_larger"
        app:layout_constraintTop_toTopOf="@id/btn_small"
        app:iconSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btn_larger"
        android:text="@string/larger"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_medium"
        app:layout_constraintTop_toTopOf="@id/btn_small"
        app:icon="@drawable/glass"
        app:iconSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/today"
        android:layout_width="wrap_content"
        android:text="@string/today"
        android:textSize="34sp"
        android:textStyle="italic"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/txt_result"
        android:layout_width="wrap_content"
        tools:text="500ml"
        android:text="0ml"
        android:layout_marginStart="10dp"
        android:textSize="52sp"
        android:textStyle="italic"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/today"
        android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>